# metricx

./: README.md  example.sh  input.jsonl  pyproject.toml  requirements.txt
metricx23/: models.py
metricx24/: models.py
